Enabling springloaded agent